--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ h1{
   margin-top:10px;
   display:flex;
   gap:10px;
+  flex-wrap:wrap;
 }
 
 .nav a{
@@ -158,6 +159,49 @@ tbody tr:last-child td{border-bottom:none;}
 .c-team{width:34%;text-align:left;font-weight:900;padding-left:14px;}
 .c-stat{width:calc((66% - 64px)/7);}
 
+/* ===== Mobile Stability Patch ===== */
+
+/* Safe area support for modern phones */
+body{
+  padding-left: calc(18px + env(safe-area-inset-left));
+  padding-right: calc(18px + env(safe-area-inset-right));
+  padding-top: calc(18px + env(safe-area-inset-top));
+  padding-bottom: calc(18px + env(safe-area-inset-bottom));
+}
+
+/* Allow horizontal scroll instead of squashing table */
+.tableFrame{
+  overflow-x:auto;
+  -webkit-overflow-scrolling:touch;
+}
+
+table{
+  min-width:720px;
+}
+
+@media (max-width:560px){
+  .header{
+    flex-direction:column;
+    align-items:flex-start;
+    gap:12px;
+  }
+
+  .meta{
+    text-align:left;
+    white-space:normal;
+    width:100%;
+  }
+
+  .brand img{
+    width:64px;
+    height:64px;
+  }
+
+  h1{
+    white-space:normal;
+    font-size:1.25rem;
+  }
+}
 </style>
 </head>
 
