--- a/contenders.html
+++ b/contenders.html
@@ -81,6 +81,7 @@ h1{
   margin-top:10px;
   display:flex;
   gap:10px;
+  flex-wrap:wrap;
 }
 
 .nav a{
@@ -157,6 +158,46 @@ tbody tr:last-child td{border-bottom:none;}
 .c-pos{width:64px;}
 .c-team{width:34%;text-align:left;font-weight:900;padding-left:14px;}
 .c-stat{width:calc((66% - 64px)/7);}
+
+/* ===== Mobile Fit (No Horizontal Scroll) ===== */
+@media (max-width:640px){
+
+  .header{
+    flex-direction:column;
+    align-items:flex-start;
+    gap:12px;
+  }
+
+  .meta{
+    text-align:left;
+    white-space:normal;
+    width:100%;
+  }
+
+  .brand img{
+    width:60px;
+    height:60px;
+  }
+
+  h1{
+    white-space:normal;
+    font-size:1.2rem;
+  }
+
+  thead th{
+    font-size:0.62rem;
+    padding:8px 4px;
+    letter-spacing:0.08em;
+  }
+
+  td{
+    font-size:0.72rem;
+    padding:8px 4px;
+  }
+
+  .c-pos{width:40px;}
+  .c-team{width:32%;padding-left:8px;}
+}
 </style>
 </head>
 
